# OpenFOAM_Workshop_2021_Microdomains_Demo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cell_ordering/: CMakeLists.txt  cell_ordering.cpp
src/of_transport/: CMakeLists.txt  lsgrad.cpp  lsgrad.hpp  meshdata.cpp  meshdata.hpp  microdomain.cpp  microdomain.hpp  of_transport.cpp  test_lsgrad.cpp
test_cases/E02_cube_hierarchical_decomposition/: run.sh
test_cases/E02_cube_hierarchical_decomposition/original_case/0/: U
test_cases/E02_cube_hierarchical_decomposition/original_case/system/: blockMeshDict  controlDict  decomposeParDict  decomposeParDict_manual  decomposeParDict_multilevel  fvSchemes  fvSolution  renumberMeshDict
